--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -1,14 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <div class="row">
+        {% include "items.html" with post=object detail=True %}
 
-    <h1>{{ object.title }}</h1>
-    <p>{{ object.content }}</p>
-
-    {% if request.user.is_authenticated %}
-        {% if request.user.is_staff %}
-            <a class="btn btn-info" href="{{ object.get_edit_url }}">Edit</a> |
-            <a class="btn btn-danger" href="{{ object.get_delete_url }}">Delete</a>
+        {% if request.user.is_authenticated %}
+            {% if request.user.is_staff %}
+                <div class="col-12">
+                    <a class="btn btn-info" href="{{ object.get_edit_url }}">Edit</a> |
+                    <a class="btn btn-danger" href="{{ object.get_delete_url }}">Delete</a>
+                </div>
+            {% endif %}
         {% endif %}
-    {% endif %}
+    </div>
 {% endblock %}
