--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 
 <body>
 {% include "navbar.html" %}
-<div class="container">
+<div class="container mt-2">
     {% block content %}
     {% endblock %}
 </div>
